test/libsolidity/syntaxTests/constructor/constructor_virtual.sol
contract C {
    constructor() virtual {}
}
// ----
// TypeError 7001: (17-41): Constructors cannot be virtual.
